Video background added

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
-<!doctype html><html class=no-js lang=en><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="ie=edge"><title>Board: Metro Dev</title><meta name=viewport content="width=device-width,initial-scale=1"><link rel=apple-touch-icon href=apple-touch-icon.png><link href=/static/css/app.a7c8d1f3f6f18ec70a3aa3072c365e62.css rel=stylesheet></head><body class=wb-socketio-config data-api=http://localhost:3001/ ><!--[if lt IE 8]>
+<!doctype html><html class=no-js lang=en><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="ie=edge"><title>Board: Metro Dev</title><meta name=viewport content="width=device-width,initial-scale=1"><link rel=apple-touch-icon href=apple-touch-icon.png><style>video {
+      position: fixed;
+      top: 0;
+      width: 100%;
+    }
+    #app {
+      position: absolute;
+      top: 0;
+    }</style><link href=/static/css/app.4b6fde722ca209a6904285fdb93fb9d6.css rel=stylesheet></head><body class=wb-socketio-config data-api=http://localhost:3001/ ><!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]--><div id=app></div><script type=text/javascript src=/static/js/manifest.2ddde826021cf5270d0e.js></script><script type=text/javascript src=/static/js/vendor.4b734bc4974f8aa36aaf.js></script><script type=text/javascript src=/static/js/app.326af0a6b4bfc0c98b0e.js></script></body></html>
+  <![endif]--><video autoplay loop><source src=static/shutterstock_v12129530.mp4 type=video/webm></video><div id=app></div><script type=text/javascript src=/static/js/manifest.21151c1cedcc56e2ecf5.js></script><script type=text/javascript src=/static/js/vendor.4b734bc4974f8aa36aaf.js></script><script type=text/javascript src=/static/js/app.5b4077386df10de47285.js></script></body></html>
