--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
-<!doctype html><html class=no-js lang=en><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="ie=edge"><title>Board: Metro Dev</title><meta name=viewport content="width=device-width,initial-scale=1"><link rel=apple-touch-icon href=apple-touch-icon.png><style>video {
+<!doctype html><html class=no-js lang=en><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="ie=edge"><title>Board: Acme Dev Team</title><meta name=viewport content="width=device-width,initial-scale=1"><link rel=apple-touch-icon href=apple-touch-icon.png><style>video {
       position: fixed;
       top: 0;
-      width: 100%;
     }
+    /** See theme css for video width/height */
+
     #app {
       position: absolute;
       top: 0;
-    }</style><link href=/static/css/app.4b6fde722ca209a6904285fdb93fb9d6.css rel=stylesheet></head><body class=wb-socketio-config data-api=http://localhost:3001/ ><!--[if lt IE 8]>
+    }</style><link rel=stylesheet type=text/css href=static/themes/desert-beach/desert-beach.css><link href=/static/css/app.4d6cb0a8c8f93e9589412be810476903.css rel=stylesheet></head><body class=wb-socketio-config data-api=http://localhost:3001/ ><!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]--><video autoplay loop><source src=static/shutterstock_v12129530.mp4 type=video/webm></video><div id=app></div><script type=text/javascript src=/static/js/manifest.21151c1cedcc56e2ecf5.js></script><script type=text/javascript src=/static/js/vendor.4b734bc4974f8aa36aaf.js></script><script type=text/javascript src=/static/js/app.5b4077386df10de47285.js></script></body></html>
+  <![endif]--><video autoplay loop><source src=static/themes/desert-beach/shutterstock_v12129530.mp4 type=video/webm></video><div id=app></div><script type=text/javascript src=/static/js/manifest.3b059ceb9be78ebe2889.js></script><script type=text/javascript src=/static/js/vendor.4b734bc4974f8aa36aaf.js></script><script type=text/javascript src=/static/js/app.1215dd0e627fddb058ad.js></script></body></html>
