--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,18 @@
     #app {
       position: absolute;
       top: 0;
-    }</style><link rel=stylesheet type=text/css href=static/themes/desert-beach/desert-beach.css><link href=/static/css/app.4d6cb0a8c8f93e9589412be810476903.css rel=stylesheet></head><body class=wb-socketio-config data-api=http://localhost:3001/ ><!--[if lt IE 8]>
+    }
+
+    .hashtag { color: #999; } /* #194893; */
+
+    .person-mh, .person-g, .person-h,
+    .person-a, .person-mi, .person-s { color: #999; } /* #999 */
+
+    .xperson-mh { color: #cb1081; } /* pink */
+    .xperson-g { color: #188f42; } /* green */
+    .xperson-h { color: #500eb4; } /* purple */
+    .xperson-mi { color: #3273dc; }
+    .xperson-s { color: #cb5a10; } /* orange */
+    .xperson-a { color: #1c51a5; } /* navy */</style><link rel=stylesheet type=text/css href=static/themes/desert-beach/desert-beach.css><link rel=stylesheet type=text/css href=static/font-awesome-4.7.0/css/font-awesome.min.css><link href=/static/css/app.dcbb835c322a00949a4ccfe08cad1e7e.css rel=stylesheet></head><body class=wb-socketio-config data-api=http://localhost:3001/ ><!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]--><video autoplay loop><source src=static/themes/desert-beach/shutterstock_v12129530.mp4 type=video/webm></video><div id=app></div><script type=text/javascript src=/static/js/manifest.3b059ceb9be78ebe2889.js></script><script type=text/javascript src=/static/js/vendor.4b734bc4974f8aa36aaf.js></script><script type=text/javascript src=/static/js/app.1215dd0e627fddb058ad.js></script></body></html>
+  <![endif]--><video autoplay loop><source src=static/themes/desert-beach/shutterstock_v12129530.mp4 type=video/webm></video><div id=app></div><script type=text/javascript src=/static/js/manifest.42fe6b72d76fb82e79af.js></script><script type=text/javascript src=/static/js/vendor.4b734bc4974f8aa36aaf.js></script><script type=text/javascript src=/static/js/app.7bddf065a69a3ac021e5.js></script></body></html>
