--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,18 @@
       top: 0;
     }
 
-    .hashtag { color: #999; } /* #194893; */
+    .hashtag { color: #999; } /* Alternatively, #194893 */
 
+    /* Grey styles for @mentions */
     .person-mh, .person-g, .person-h,
-    .person-a, .person-mi, .person-s { color: #999; } /* #999 */
+    .person-mi, .person-s, .person-a { color: #999; }
 
-    .xperson-mh { color: #cb1081; } /* pink */
-    .xperson-g { color: #188f42; } /* green */
-    .xperson-h { color: #500eb4; } /* purple */
-    .xperson-mi { color: #3273dc; }
-    .xperson-s { color: #cb5a10; } /* orange */
-    .xperson-a { color: #1c51a5; } /* navy */</style><link rel=stylesheet type=text/css href=static/themes/desert-beach/desert-beach.css><link rel=stylesheet type=text/css href=static/font-awesome-4.7.0/css/font-awesome.min.css><link href=/static/css/app.61b998e9ecb176c8b0a92d6179e35da2.css rel=stylesheet></head><body class=wb-socketio-config data-api=http://localhost:3001/ ><!--[if lt IE 8]>
+    /* Colour styles for @mentions */
+    .pink-mh { color: #cb1081; }
+    .green-g { color: #188f42; }
+    .purple-h { color: #500eb4; }
+    .color-mi { color: #3273dc; }
+    .orange-s { color: #cb5a10; }
+    .navy-a { color: #1c51a5; }</style><link rel=stylesheet type=text/css href=static/themes/desert-beach/desert-beach.css><link rel=stylesheet type=text/css href=static/font-awesome-4.7.0/css/font-awesome.min.css><link href=/static/css/app.fdc59d35c40d2a073fa9c1c872ae6423.css rel=stylesheet></head><body><!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]--><video autoplay loop poster=static/themes/desert-beach/poster.png><source src=static/themes/desert-beach/shutterstock_v12129530.mp4 type=video/webm></video><div id=app></div><script type=text/javascript src=/static/js/manifest.4725780996faa12f432b.js></script><script type=text/javascript src=/static/js/vendor.4b734bc4974f8aa36aaf.js></script><script type=text/javascript src=/static/js/app.b6d72862f7eecbe8ad53.js></script></body></html>
+  <![endif]--><video autoplay loop poster=static/themes/desert-beach/poster.png><source src=static/themes/desert-beach/shutterstock_v12129530.mp4 type=video/webm></video><div id=app></div><script type=text/javascript src=/static/js/manifest.f2877850810685ae4813.js></script><script type=text/javascript src=/static/js/vendor.4b734bc4974f8aa36aaf.js></script><script type=text/javascript src=/static/js/app.034add383d7ecc79478f.js></script></body></html>
