--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,17 @@
     }
     /** See theme css for video width/height */
 
+    /** Background: use image instead of video for mobile */
+    @media (max-width: 700px) {
+      video {
+        display: none;
+      }
+      body {
+        background: url("static/themes/desert-beach/poster.png") no-repeat fixed;
+        background-size: cover;
+      }
+    }
+
     #app {
       position: absolute;
       top: 0;
@@ -21,6 +32,6 @@
     .purple-h { color: #500eb4; }
     .color-mi { color: #3273dc; }
     .orange-s { color: #cb5a10; }
-    .navy-a { color: #1c51a5; }</style><link rel=stylesheet type=text/css href=static/themes/desert-beach/desert-beach.css><link rel=stylesheet type=text/css href=static/font-awesome-4.7.0/css/font-awesome.min.css><link href=/static/css/app.5d4485f253b42bd9f4265c4b170838e8.css rel=stylesheet></head><body><!--[if lt IE 8]>
+    .navy-a { color: #1c51a5; }</style><link rel=stylesheet type=text/css href=static/themes/desert-beach/desert-beach.css><link rel=stylesheet type=text/css href=static/font-awesome-4.7.0/css/font-awesome.min.css><link href=/static/css/app.add155718e9001c1c713128e681ecc0b.css rel=stylesheet></head><body><!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]--><video autoplay loop poster=static/themes/desert-beach/poster.png><source src=static/themes/desert-beach/shutterstock_v12129530.mp4 type=video/webm></video><div id=app></div><script type=text/javascript src=/static/js/manifest.bc6db22c8a7adc99651d.js></script><script type=text/javascript src=/static/js/vendor.ed9569b2d8f544afd682.js></script><script type=text/javascript src=/static/js/app.4fce200182117b7a656a.js></script></body></html>
+  <![endif]--><video autoplay loop poster=static/themes/desert-beach/poster.png><source src=static/themes/desert-beach/shutterstock_v12129530.mp4 type=video/webm></video><div id=app></div><script type=text/javascript src=/static/js/manifest.18d5c9f3a8e181c884b9.js></script><script type=text/javascript src=/static/js/vendor.ed9569b2d8f544afd682.js></script><script type=text/javascript src=/static/js/app.294438ca223140af21ed.js></script></body></html>
