Background tweaked for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       }
       body {
         background: url("static/themes/desert-beach/poster.png") no-repeat fixed;
-        /* background-size: cover; */
+        background-size: cover;
       }
     }
 
